[package]
name = "rp"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.7.0", path = "../../src/embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = { version = "0.1.1", path = "../../src/embassy/embassy-futures" }
embassy-rp = { version = "0.2.0", path = "../../src/embassy/embassy-rp", features = ["time-driver", "rp2040", "critical-section-impl"] }
embassy-time = { version = "0.4.0", path = "../../src/embassy/embassy-time" }
embassy-usb = { version = "0.3.0", path = "../../src/embassy/embassy-usb" }
embassy-usb-logger = { version = "0.2.0", path = "../../src/embassy/embassy-usb-logger" }
log = "0.4.22"
panic-probe = "0.3.2"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
